--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div id="guardaCabecalhoNav">
 						<nav>
 							<ul>
-								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="./lucasanimador/images/pagina-inicial-casa.png" /></a></li>
+								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="http://images.lucasanimador.com.br/pagina-inicial-casa.png" /></a></li>
 								<li><a href="#habilidades">Habilidades</a></li>
 								<li><a href="#formacao">Formação</a></li>
 								<li><a href="#experiencia">Experiência</a></li>
@@ -84,7 +84,7 @@
 					<section id="habilidades">
 						<div id="habilidadesResumo" class="separaConteudo">
 							<h1>Habilidades</h1>
-							<img alt="Lucas da Silva Soares - Desenvolvedor Front-End" title="Lucas da Silva Soares - Desenvolvedor Front-End" src="./lucasanimador/images/lucas-silva-soares-foto-front-end.jpg" />
+							<img alt="Lucas da Silva Soares - Desenvolvedor Front-End" title="Lucas da Silva Soares - Desenvolvedor Front-End" src="http://images.lucasanimador.com.br/lucas-silva-soares-foto-front-end.jpg" />
 							<p>
 								Atuação na área de Web em São Paulo / SP desde 2011. Criação de códigos HTML semânticamente corretos buscando os melhores resultados para o SEO. 
 								Otimização do CSS evitando 'id's desnecessários e código duplicado. Implementação de interação e animações através do JavaScript como banners rotativos, 
@@ -363,7 +363,7 @@
 								<div class="boxBranco">
 									<a href="http://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse2&course=11481&template=397.dwt&testeira=303&unit=SCI" 
 									title="Senac - Pós graduação em Animação"
-									target="_blank"><img alt="Senac - Pós graduação em Animação" src="./lucasanimador/images/animacao-senac.png" /></a>
+									target="_blank"><img alt="Senac - Pós graduação em Animação" src="http://images.lucasanimador.com.br/animacao-senac.png" /></a>
 								</div>
 							</div>
 						</div>						
@@ -380,7 +380,7 @@
 								<div class="boxBranco">
 									<a href="http://www.uninove.br/Paginas/ShowGraduacao.aspx?SEQ=53" 
 									title="Uninove - Sistemas para Internet"
-									target="_blank"><img alt="Uninove - Sistemas para Internet" src="./lucasanimador/images/sistemas-internet-uninove.png" /></a>
+									target="_blank"><img alt="Uninove - Sistemas para Internet" src="http://images.lucasanimador.com.br/sistemas-internet-uninove.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -404,7 +404,7 @@
 								<div class="boxBranco boxMedio">
 									<a href="http://foster.com.br/" 
 									title="Agência Foster - WPP Company"
-									target="_blank"><img alt="Agência Foster - WPP Company" src="./lucasanimador/images/front-end-foster-wpp.png" /></a>
+									target="_blank"><img alt="Agência Foster - WPP Company" src="http://images.lucasanimador.com.br/front-end-foster-wpp.png" /></a>
 								</div>
 							</div>
 						</div>	
@@ -422,7 +422,7 @@
 								<div class="boxBranco boxMedio">
 									<a href="http://www.dell.com.br/" 
 									title="Dell Computadores"
-									target="_blank"><img alt="Dell Computadores" src="./lucasanimador/images/analista-suporte-dell-computadores.png" /></a>
+									target="_blank"><img alt="Dell Computadores" src="http://images.lucasanimador.com.br/analista-suporte-dell-computadores.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -470,7 +470,7 @@
 								<div class="boxBranco boxGigante">									
 									<a href="http://lucasdasilvasoares.github.io" 
 									title="Portfolio Lucas da Silva Soares"
-									target="_blank"><img alt="Portfolio Lucas da Silva Soares" src="./lucasanimador/images/lucas-front-end-portfolio.png" /></a>
+									target="_blank"><img alt="Portfolio Lucas da Silva Soares" src="http://images.lucasanimador.com.br/lucas-front-end-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -489,7 +489,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.bayerpet.com.br/combinacoes-inteligentes/caes/" 
 									title="Hotsite Bayer Pet Combinações Inteligentes"
-									target="_blank"><img alt="Hotsite Bayer Pet Combinações Inteligentes" src="./lucasanimador/images/bayer-portfolio.png" /></a>
+									target="_blank"><img alt="Hotsite Bayer Pet Combinações Inteligentes" src="http://images.lucasanimador.com.br/bayer-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -513,7 +513,7 @@
 								<div class="boxBranco boxMaior">									
 									<a href="http://www.goodyear.com.br"
 									title="Website Goodyear Pneus"
-									target="_blank"><img alt="Website Goodyear Pneus" src="./lucasanimador/images/goodyear-portfolio.png" /></a>
+									target="_blank"><img alt="Website Goodyear Pneus" src="http://images.lucasanimador.com.br/goodyear-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -532,7 +532,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.arcelormittal.com/br/" 
 									title="Novo Website ArcelorMittal"
-									target="_blank"><img alt="Novo Website ArcelorMittal" src="./lucasanimador/images/arcelor-mittal-portfolio.png" /></a>
+									target="_blank"><img alt="Novo Website ArcelorMittal" src="http://images.lucasanimador.com.br/arcelor-mittal-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -553,7 +553,7 @@
 								<div class="boxBranco boxMaior">									
 									<a href="https://www.facebook.com/MundoWeleda/app_200274523438038" 
 									title="Aplicativo para o Facebook: Weleda - Sua Rosa"
-									target="_blank"><img alt="Aplicativo para o Facebook: Weleda - Sua Rosa" src="./lucasanimador/images/weleda-portfolio.png" /></a>
+									target="_blank"><img alt="Aplicativo para o Facebook: Weleda - Sua Rosa" src="http://images.lucasanimador.com.br/weleda-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -572,7 +572,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="./doodle-google-muybridge/" 
 									title='Doodle Google "182º aniversário de Eadweard J. Muybridge"'
-									target="_blank"><img alt='Doodle Google "182º aniversário de Eadweard J. Muybridge"' src="./lucasanimador/images/google-portfolio.png" /></a>
+									target="_blank"><img alt='Doodle Google "182º aniversário de Eadweard J. Muybridge"' src="http://images.lucasanimador.com.br/google-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -591,7 +591,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.danonebabyprofissionais.com.br/home/" 
 									title="Banner Danone Early Life Nutrition"
-									target="_blank"><img alt="Banner Danone Early Life Nutrition" src="./lucasanimador/images/danone-nutrition-portfolio.png" /></a>
+									target="_blank"><img alt="Banner Danone Early Life Nutrition" src="http://images.lucasanimador.com.br/danone-nutrition-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -608,7 +608,7 @@
 								<div class="boxBranco">									
 									<a href="http://www.hospitalsiriolibanes.org.br/Paginas/default.aspx" 
 									title="Hospital Sírio-Libanês"
-									target="_blank"><img alt="Hospital Sírio-Libanês" src="./lucasanimador/images/hospital-sirio-libanes-portfolio.png" /></a>
+									target="_blank"><img alt="Hospital Sírio-Libanês" src="http://images.lucasanimador.com.br/hospital-sirio-libanes-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -625,7 +625,7 @@
 								<div class="boxBranco">									
 									<a href="http://www.metro.sp.gov.br/" 
 									title="Metrô SP"
-									target="_blank"><img alt="Metrô SP" src="./lucasanimador/images/metro-portfolio.png" /></a>
+									target="_blank"><img alt="Metrô SP" src="http://images.lucasanimador.com.br/metro-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
